concluindo passos e tipos com imagens

--- a/src/index.css
+++ b/src/index.css
@@ -1,12 +1,14 @@
 @import url('https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Instrument+Serif:ital@0;1&family=Noto+Serif+Display:ital,wght@0,100..900;1,100..900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=DM+Mono:ital,wght@0,300;0,400;0,500;1,300;1,400;1,500&family=Langar&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Archivo:ital,wght@0,100..900;1,100..900&display=swap');
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   --primary-font: "DM Sans", sans-serif;
   --secondary-font: "Noto Serif Display", serif;
   --third-font: "Instrument Serif", serif;
   --fourth-font: "DM Mono", monospace;
+  --fifth-font: "Archivo", sans-serif;
   line-height: 1.5;
   font-weight: 400;
 
