--- a/src/index.css
+++ b/src/index.css
@@ -11,8 +11,7 @@
   --fifth-font: "Archivo", sans-serif;
   line-height: 1.5;
   font-weight: 400;
-
-  color-scheme: light dark;
+  color-scheme: light ;
   color: rgba(255, 255, 255, 0.87);
   background-color: #242424;
 
@@ -21,7 +20,9 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
-
+html{
+   background-color: transparent !important;
+}
 
 
 h1 {
